--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Full stack document management system, complete with roles and privileges.",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon ./bin/www.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "mocha": "mocha",
+    "start": "babel-node bin/www.js",
+    "test": "mocha --reporter progress  --require babel-register test/testSetup.js \"client/test/*.spec.js\"",
     "babel": "babel",
     "webpack": "webpack"
   },
@@ -16,11 +17,12 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/andela-tezebuike/TrakBon-Docs.git"
+    "url": "https://github.com/andela-tezebuike/Trak-Bon-Docs.git"
   },
   "author": "Tracy ezebuike",
   "license": "MIT",
   "dependencies": {
+    "babel-polyfill": "^6.23.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.1",
     "eslint": "^3.19.0",
@@ -28,30 +30,70 @@
     "eslint-plugin-import": "^2.2.0",
     "express": "^4.15.2",
     "fs": "0.0.1-security",
+    "jquery": "^3.2.1",
     "jsonwebtoken": "^7.3.0",
+    "material-ui": "^0.18.0",
+    "materialize-css": "^0.98.2",
     "morgan": "^1.8.1",
     "path": "^0.12.7",
     "pg": "^6.1.5",
     "pg-hstore": "^2.3.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-hot-loader": "^3.0.0-beta.6",
+    "react-mdl": "^1.10.2",
+    "react-quill": "^1.0.0-rc.2",
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
     "react-router-redux": "^5.0.0-alpha.6",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "sequelize": "^3.30.4",
     "sequelize-cli": "^2.7.0",
+    "superagent": "^3.5.2",
+    "toastr": "^2.1.2",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.4"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
+    "babel-plugin-react-display-name": "^2.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-register": "^6.24.1",
+    "cheerio": "^0.22.0",
+    "colors": "^1.1.2",
+    "compression": "^1.6.2",
+    "cross-env": "^4.0.0",
+    "css-loader": "^0.28.1",
+    "enzyme": "^2.8.2",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.1.3",
     "eslint-plugin-import": "^2.2.0",
-    "nodemon": "^1.11.0"
+    "eslint-plugin-react": "^6.10.3",
+    "eslint-watch": "^3.1.0",
+    "eventsource-polyfill": "^0.9.6",
+    "expect": "^1.20.2",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
+    "jsdom": "^10.0.0",
+    "mocha": "^3.3.0",
+    "nock": "^9.0.13",
+    "nodemon": "^1.11.0",
+    "npm-run-all": "^4.0.2",
+    "open": "0.0.5",
+    "react-addons-test-utils": "^15.5.1",
+    "redux-immutable-state-invariant": "^2.0.0",
+    "redux-mock-store": "^1.2.3",
+    "rimraf": "^2.6.1",
+    "style-loader": "^0.16.1",
+    "url-loader": "^0.5.8",
+    "webpack": "^2.4.1",
+    "webpack-dev-middleware": "^1.10.2",
+    "webpack-hot-middleware": "^2.18.0"
   }
 }
