--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,7 @@
     "react"
   ],
   "parserOptions": {
-    "ecmaVersion": 6,
+    "esversion": 6,
     "sourceType": "module",
     "ecmaFeatures": {
       "jsx": true
@@ -25,6 +25,7 @@
   "globals": {
     "window": true
   },
+  "parser": "babel-eslint",
   "rules": {
     "max-len":[2, 80, 2],
     "indent": [2, 2],
