--- a/package.json
+++ b/package.json
@@ -51,14 +51,16 @@
     "chai-http": "^3.0.0",
     "dotenv": "^4.0.0",
     "eslint": "^3.19.0",
-    "eslint-config-airbnb-base": "^11.1.3",
-    "eslint-plugin-import": "^2.2.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^6.10.3",
     "express": "^4.15.2",
     "faker": "^4.1.0",
     "fm-log": "^4.4.3",
     "fs": "0.0.1-security",
     "jquery": "^3.2.1",
     "jsonwebtoken": "^7.3.0",
+    "jwt-decode": "^2.2.0",
     "lodash": "^4.17.4",
     "material-design": "0.0.0",
     "morgan": "^1.8.1",
@@ -95,9 +97,6 @@
     "css-loader": "^0.28.1",
     "enzyme": "^2.8.2",
     "eslint": "^3.19.0",
-    "eslint-config-airbnb-base": "^11.1.3",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-react": "^6.10.3",
     "eslint-watch": "^3.1.0",
     "eventsource-polyfill": "^0.9.6",
     "expect": "^1.20.2",
