--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
   "root": true,
   "extends": "airbnb",
   "parser": "babel-eslint",
+  "esversion": 6,
   "env": {
     "browser": true,
     "commonjs": true,
