update setup files

--- a/.sequelizerc
+++ b/.sequelizerc
@@ -4,6 +4,6 @@ module.exports = {
   'config': path.resolve('server/config', 'config.js'),
   "models-path": path.resolve('server', 'models'),
   "seeders-path": path.resolve('server', 'seeders'),
-  'migrations-path': path.resolve('server', 'migrate')
+  'migrations-path': path.resolve('server', 'migrations')
 
 }
