--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "start": "npm-run-all start:server",
     "babel": "babel",
     "webpack": "webpack",
-    "test": "NODE_ENV=test mocha \"./**/server/tests/**/*.spec.js\" --compilers js:babel-register --timeout 60000",
-    "db:migrate": "sequelize db:migrate",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "test:integration": "NODE_ENV=test npm run db:migrate:test && npm run db:seed:test && npm run test-backend",
+    "test-backend": "NODE_ENV=test nyc --reporter=html mocha \"./**/server/tests/**/*.spec.js\" --compilers js:babel-register --timeout 60000",
+    "test": "NODE_ENV=test npm run test:integration && npm run coverage",
     "db:migrate:test": "NODE_ENV=test sequelize db:migrate",
-    "seed:test": "NODE_ENV=test sequelize db:seed:all",
-    "seed:db": "node dist/test/server/helpers/SeedHelper.js",
-    "start:server": "babel-node ./bin/www.js",
-    "start:nodemon": "nodemon ./bin/www.js --exec babel-node --presets es2015,stage-2",
+    "db:seed:test": "NODE_ENV=test sequelize db:seed:all",
+    "db:migrate": "sequelize db:migrate:undo:all && sequelize db:migrate",
+    "db:seed": "sequelize db:seed:all",
+    "db:setup": "npm run db:migrate && npm run db:seed",
+    "undo": "NODE_ENV=test sequelize db:migrate:undo:all",
     "sequelize": "sequelize"
   },
   "keywords": [
