--- a/package.json
+++ b/package.json
@@ -4,21 +4,20 @@
   "description": "Full stack document management system, complete with roles and privileges.",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon --watch server --exec babel-node -- ./bin/www.js",
+    "start:dev": "nodemon --exec babel-node -- ./bin/www.js",
     "mocha": "mocha",
     "start": "npm-run-all start:server",
     "babel": "babel",
     "webpack": "webpack",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "test:integration": "NODE_ENV=test npm run db:migrate:test && npm run db:seed:test && npm run test-backend",
+    "test:integration": "npm run db:migrate:test && npm run db:seed:test && npm run test-backend",
     "test-backend": "NODE_ENV=test nyc --reporter=html mocha \"./**/server/tests/**/*.spec.js\" --compilers js:babel-register --timeout 60000",
     "test": "NODE_ENV=test npm run test:integration && npm run coverage",
-    "db:migrate:test": "NODE_ENV=test sequelize db:migrate",
+    "db:migrate:test": "NODE_ENV=test sequelize db:migrate:undo:all && NODE_ENV=test sequelize db:migrate",
     "db:seed:test": "NODE_ENV=test sequelize db:seed:all",
     "db:migrate": "sequelize db:migrate:undo:all && sequelize db:migrate",
     "db:seed": "sequelize db:seed:all",
     "db:setup": "npm run db:migrate && npm run db:seed",
-    "undo": "NODE_ENV=test sequelize db:migrate:undo:all",
     "sequelize": "sequelize"
   },
   "keywords": [
