save setup files

--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "scripts": {
     "start:dev": "nodemon --exec babel-node -- ./bin/www.js",
     "mocha": "mocha",
-    "start": "npm-run-all start:server",
+    "start": "npm run start:dev",
     "babel": "babel",
     "webpack": "webpack",
+    "clean": "rimraf dist",
+    "build": "npm run clean && npm run build:server && npm run build:client",
+    "build:server": "babel server -d dist/server",
+    "build:client": "cross-env NODE_ENV=production webpack --config ./webpack.config.prod.js --progress --profile --colors",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "test:integration": "npm run db:migrate:test && npm run db:seed:test && npm run test-backend",
     "test-backend": "NODE_ENV=test nyc --reporter=html mocha \"./**/server/tests/**/*.spec.js\" --compilers js:babel-register --timeout 60000",
