--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,5 @@ services:
 script:
   - npm test
 
-after_script:
-  - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
+after_success:
+- npm run coveralls
