--- a/package.json
+++ b/package.json
@@ -88,9 +88,7 @@
     "superagent": "^3.5.2",
     "toastr": "^2.1.2",
     "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.4.4"
-  },
-  "devDependencies": {
+    "webpack-dev-server": "^2.4.4",
     "cheerio": "^0.22.0",
     "colors": "^1.1.2",
     "compression": "^1.6.2",
@@ -98,7 +96,6 @@
     "cross-env": "^4.0.0",
     "css-loader": "^0.28.1",
     "enzyme": "^2.8.2",
-    "eslint": "^3.19.0",
     "eslint-watch": "^3.1.0",
     "eventsource-polyfill": "^0.9.6",
     "expect": "^1.20.2",
@@ -113,7 +110,6 @@
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.2",
     "nyc": "^10.3.2",
-    "open": "0.0.5",
     "react-addons-test-utils": "^15.5.1",
     "redux-immutable-state-invariant": "^2.0.0",
     "redux-mock-store": "^1.2.3",
@@ -122,7 +118,6 @@
     "style-loader": "^0.16.1",
     "supertest": "^3.0.0",
     "url-loader": "^0.5.8",
-    "webpack": "^2.4.1",
     "webpack-dev-middleware": "^1.10.2",
     "webpack-hot-middleware": "^2.18.0"
   }
