--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "axios": "^0.16.1",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.3",
     "babel-istanbul": "^0.12.2",
     "babel-loader": "^7.0.0",
     "babel-plugin-react-display-name": "^2.0.0",
@@ -55,7 +56,7 @@
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-plugin-jsx-a11y": "^5.0.3",
-    "eslint-plugin-react": "^6.10.3",
+    "eslint-plugin-react": "^7.0.1",
     "express": "^4.15.2",
     "faker": "^4.1.0",
     "fm-log": "^4.4.3",
@@ -88,7 +89,9 @@
     "superagent": "^3.5.2",
     "toastr": "^2.1.2",
     "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.4.4"
+    "webpack-dev-server": "^2.4.4",
+    "webpack-dev-middleware": "^1.10.2",
+    "webpack-hot-middleware": "^2.18.0"
   },
   "devDependencies": {
     "cheerio": "^0.22.0",
@@ -121,9 +124,6 @@
     "sass-loader": "^6.0.5",
     "style-loader": "^0.16.1",
     "supertest": "^3.0.0",
-    "url-loader": "^0.5.8",
-    "webpack": "^2.4.1",
-    "webpack-dev-middleware": "^1.10.2",
-    "webpack-hot-middleware": "^2.18.0"
+    "url-loader": "^0.5.8"
   }
 }
