--- a/package.json
+++ b/package.json
@@ -114,9 +114,7 @@
     "webpack": "^2.4.1",
     "webpack-dev-middleware": "^1.10.2",
     "webpack-dev-server": "^2.4.4",
-    "webpack-hot-middleware": "^2.18.0"
-  },
-  "devDependencies": {
+    "webpack-hot-middleware": "^2.18.0",
     "babel-jest": "^20.0.3",
     "cheerio": "^0.22.0",
     "colors": "^1.1.2",
