--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Full stack document management system, complete with roles and privileges.",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon --exec babel-node -- ./bin/www.js",
+    "start:dev": "nodemon --watch server --exec babel-node -- ./bin/www.js",
     "mocha": "mocha",
     "start": "npm run start:dev",
     "babel": "babel",
@@ -23,7 +23,8 @@
     "db:seed": "sequelize db:seed:all",
     "db:setup": "npm run db:migrate && npm run db:seed",
     "sequelize": "sequelize",
-    "e2e:setup": "selenium-standalone install"
+    "e2e:setup": "selenium-standalone install",
+    "document": "rimraf docs/ && jsdoc -r -c ./conf.json --readme ./documentation/README.md --destination docs"
   },
   "jest": {
     "transform": {
@@ -81,14 +82,18 @@
     "express": "^4.15.2",
     "faker": "^4.1.0",
     "fm-log": "^4.4.3",
+    "forever": "^0.15.3",
     "fs": "0.0.1-security",
+    "ink-docstrap": "^1.3.0",
     "jquery": "^3.2.1",
+    "jsdoc": "^3.4.3",
     "jsonwebtoken": "^7.3.0",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.4",
     "lodash-checkit": "^2.0.1",
     "material-design": "0.0.0",
     "morgan": "^1.8.1",
+    "morgan-json": "^1.1.0",
     "nightwatch": "^0.9.16",
     "open": "0.0.5",
     "path": "^0.12.7",
@@ -97,13 +102,13 @@
     "prop-types": "^15.5.9",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-hot-loader": "^3.0.0-beta.6",
     "react-mdl": "^1.10.2",
     "react-quill": "^1.0.0-rc.2",
     "react-redux": "^5.0.4",
     "react-router": "^3.0.2",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^5.0.0-alpha.6",
+    "react-simplest-pagination": "^1.0.2",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
@@ -114,7 +119,8 @@
     "webpack": "^2.4.1",
     "webpack-dev-middleware": "^1.10.2",
     "webpack-dev-server": "^2.4.4",
-    "webpack-hot-middleware": "^2.18.0"
+    "webpack-hot-middleware": "^2.18.0",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
     "babel-jest": "^20.0.3",
@@ -144,6 +150,7 @@
     "nyc": "^10.3.2",
     "open": "0.0.5",
     "react-dom": "^15.6.0",
+    "react-hot-loader": "^1.3.1",
     "react-test-renderer": "^15.5.4",
     "redux-immutable-state-invariant": "^2.0.0",
     "redux-mock-store": "^1.2.3",
