--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "eslint-config-airbnb": "^15.0.1",
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.0.1",
+    "events": "^1.1.1",
     "express": "^4.15.2",
     "faker": "^4.1.0",
     "fm-log": "^4.4.3",
@@ -98,6 +99,7 @@
     "morgan": "^1.8.1",
     "morgan-json": "^1.1.0",
     "nightwatch": "^0.9.16",
+    "node-mocks-http": "^1.6.3",
     "open": "0.0.5",
     "path": "^0.12.7",
     "pg": "^6.1.5",
